--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1 id="title">Paleta de Cores</h1>
+    <main>
+        <section>
+            <h1 id="title">Paleta de Cores</h1>
+        </section>
+        <section id="color-palette"></section>
+    </main>
+  
+    <script src="./script.js"></script>
 </body>
 </html>
