--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <script src="./script.js"></script>
+    <h1 id="title">Paleta de Cores</h1>
+    <script src="main.js"></script>
 </body>
 </html>
