Feat: Adiciona botão de limpar e salva desenho.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,44 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
+
+    <section id="color-palette">
+        <div id="color-0" class="color"></div>
+        <div id="color-1" class="color"></div>
+        <div id="color-2" class="color"></div>
+        <div id="color-3" class="color"></div>
+    </section>
+
+    <button id="button-random-color">Cores aleatórias</button>
+    <button id="clear-board">Limpar</button>
+
+    <section id="pixel-board">
+        <div id="pixel-0" class="pixel"></div>
+        <div id="pixel-1" class="pixel"></div>
+        <div id="pixel-2" class="pixel"></div>
+        <div id="pixel-3" class="pixel"></div>
+        <div id="pixel-4" class="pixel"></div>
+        <div id="pixel-5" class="pixel"></div>
+        <div id="pixel-6" class="pixel"></div>
+        <div id="pixel-7" class="pixel"></div>
+        <div id="pixel-8" class="pixel"></div>
+        <div id="pixel-9" class="pixel"></div>
+        <div id="pixel-10" class="pixel"></div>
+        <div id="pixel-11" class="pixel"></div>
+        <div id="pixel-12" class="pixel"></div>
+        <div id="pixel-13" class="pixel"></div>
+        <div id="pixel-14" class="pixel"></div>
+        <div id="pixel-15" class="pixel"></div>
+        <div id="pixel-16" class="pixel"></div>
+        <div id="pixel-17" class="pixel"></div>
+        <div id="pixel-18" class="pixel"></div>
+        <div id="pixel-19" class="pixel"></div>
+        <div id="pixel-20" class="pixel"></div>
+        <div id="pixel-21" class="pixel"></div>
+        <div id="pixel-22" class="pixel"></div>
+        <div id="pixel-23" class="pixel"></div>
+        <div id="pixel-24" class="pixel"></div>
+    </section>
     <script src="main.js"></script>
 </body>
 </html>
