--- a/index.html
+++ b/index.html
@@ -19,34 +19,10 @@
 
     <button id="button-random-color">Cores aleatórias</button>
     <button id="clear-board">Limpar</button>
+    <input type="number" min="1" id="board-size">
+    <button id="generate-board">VQV</button>
 
-    <section id="pixel-board">
-        <div id="pixel-0" class="pixel"></div>
-        <div id="pixel-1" class="pixel"></div>
-        <div id="pixel-2" class="pixel"></div>
-        <div id="pixel-3" class="pixel"></div>
-        <div id="pixel-4" class="pixel"></div>
-        <div id="pixel-5" class="pixel"></div>
-        <div id="pixel-6" class="pixel"></div>
-        <div id="pixel-7" class="pixel"></div>
-        <div id="pixel-8" class="pixel"></div>
-        <div id="pixel-9" class="pixel"></div>
-        <div id="pixel-10" class="pixel"></div>
-        <div id="pixel-11" class="pixel"></div>
-        <div id="pixel-12" class="pixel"></div>
-        <div id="pixel-13" class="pixel"></div>
-        <div id="pixel-14" class="pixel"></div>
-        <div id="pixel-15" class="pixel"></div>
-        <div id="pixel-16" class="pixel"></div>
-        <div id="pixel-17" class="pixel"></div>
-        <div id="pixel-18" class="pixel"></div>
-        <div id="pixel-19" class="pixel"></div>
-        <div id="pixel-20" class="pixel"></div>
-        <div id="pixel-21" class="pixel"></div>
-        <div id="pixel-22" class="pixel"></div>
-        <div id="pixel-23" class="pixel"></div>
-        <div id="pixel-24" class="pixel"></div>
-    </section>
+    <section id="pixel-board"></section>
     <script src="main.js"></script>
 </body>
 </html>
